[tool.poetry]
name = "megaplan-project-to-xlsx"
version = "0.1.0"
description = ""
authors = ["ZhakovArtyom <127793560+ZhakovArtyom@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
openpyxl = "^3.1.5"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
